banner2 fixed smaller and button smaller

--- a/app/assets/stylesheets/components/_banner2.scss
+++ b/app/assets/stylesheets/components/_banner2.scss
@@ -1,7 +1,7 @@
 .banner2 {
   color: white;
   text-align: center;
-  height: calc(100vh - 70px);
+  height: calc(70vh - 70px);
   /* if you have a 70px navbar => height: calc(100vh - 70px); */
   background-size: cover !important;
   align-items: center;
@@ -9,7 +9,11 @@
 }
 
 .banner2 h3 {
-  padding-top: 270px;
+  padding-top: 190px;
+}
+
+.banner2 h5 {
+  padding-top: 190px;
 }
 
 .banner2 p {
@@ -22,7 +26,7 @@
 
 
 .banner2link {
-  font-size: 38px;
+  font-size: 21px;
   text-decoration: none;
   background-color: #306FF4;
   color: white;
